# elphelphg

./: .gitignore  COPYRIGHT.md  INSTALL.txt  README.md
src/: CMakeLists.txt  camera.hpp  cameraArray.cpp  channel.cpp  channel.hpp  eqrData.hpp  file.cpp  image.hpp  imagej_elphel_preferences.cpp  imagej_elphel_preferences.hpp  sensorData.cpp  utils.cpp  utils.hpp  xml.cpp
src/doc/: Doxyfile.in
src/elphelphg/: CMakeLists.txt  camera.cpp  camera.hpp  cameraArray.cpp  cameraArray.hpp  channel.cpp  channel.hpp  elphelphg.pc.in  eqrData.cpp  eqrData.hpp  file.cpp  file.hpp  footage.cpp  footage.hpp  image.cpp  image.hpp  imagej_elphel_preferences.cpp  imagej_elphel_preferences.hpp  sensorData.cpp  sensorData.hpp  tile.cpp  tile.hpp  utils.cpp  utils.hpp  xml.cpp  xml.hpp
src/examples/: CMakeLists.txt
src/examples/calibration_data/: CMakeLists.txt  elphelphg_cstub.cpp  elphelphg_cstub.h  elphelphg_cstubs.cpp  eqr_data.cpp  eqr_data_c.c  sensor_data.cpp  sensor_data_c.c
test/calibration_data/: Makefile  imagej-elphel.xml  sensor_data.c
